pyspark ML tutorial finished

--- a/pyspark/ML_tutorial_pyspark.ipynb
+++ b/pyspark/ML_tutorial_pyspark.ipynb
@@ -124,7 +124,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fb839f08690>"
+       "<pyspark.sql.session.SparkSession at 0x7fb8e2f08690>"
       ]
      },
      "execution_count": 6,
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.context.SQLContext at 0x7fb83ce0b410>"
+       "<pyspark.sql.context.SQLContext at 0x7fb8e5e0a4d0>"
       ]
      },
      "execution_count": 8,
@@ -783,6 +783,486 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build ML using Spark ML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- split train, test data\n",
+    "    * ``randomSplit()`` 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pyspark.sql.dataframe.DataFrame'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['medhv',\n",
+       " 'totbdrms',\n",
+       " 'pop',\n",
+       " 'houshlds',\n",
+       " 'medinc',\n",
+       " 'rmsperhh',\n",
+       " 'popperhh',\n",
+       " 'bdrmsperrm',\n",
+       " 'features',\n",
+       " 'features_scaled']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data, test_data = scaled_df.randomSplit([0.8, 0.2], seed=rnd_seed)\n",
+    "print(type(train_data))\n",
+    "train_data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Elastic Net regression 사용\n",
+    "- ``elasticNetParam``: ``L1의 alpha``와 동일. 그래서 이 값이 1이면 Lasso와 동일, 만약 0이면 Ridged와 동일\n",
+    "    \n",
+    "- ``regParam``: L1, L2을 얼마나 규제할지 계수값\n",
+    "- ``featuresCol``: 독립변수\n",
+    "- ``labelCol``: 종속변수\n",
+    "- ``predictionCol``: 예측값으로 생성할 변수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Elastic Net 모델 정의\n",
+    "lr = LinearRegression(featuresCol='features_scaled',\n",
+    "                     labelCol='medhv',\n",
+    "                     predictionCol='predmedhv',\n",
+    "                     maxIter=10,\n",
+    "                     regParam=0.3,\n",
+    "                     elasticNetParam=0.8,\n",
+    "                     standardization=False)\n",
+    "# 모델 학습\n",
+    "linearModel = lr.fit(train_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 예측 시에는 ``model.transform(data)``사용!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DenseVector([0.0, 0.0, 0.0, 0.5262, 0.0, 0.0, 0.0])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Elastic Net의 feature별 회귀계수 값들 살펴보기\n",
+    "linearModel.coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['totbdrms', 'pop', 'houshlds', 'medinc', 'rmsperhh', 'popperhh', 'bdrmsperrm'] <class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(featureCols, type(featureCols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0013833516596085"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vertical Intercept(y절편) 살펴보기\n",
+    "linearModel.intercept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Co-efficients</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Intercept</td>\n",
+       "      <td>1.001383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>totbdrms</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pop</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>houshlds</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>medinc</td>\n",
+       "      <td>0.526157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>rmsperhh</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>popperhh</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>bdrmsperrm</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Feature  Co-efficients\n",
+       "0   Intercept       1.001383\n",
+       "1    totbdrms       0.000000\n",
+       "2         pop       0.000000\n",
+       "3    houshlds       0.000000\n",
+       "4      medinc       0.526157\n",
+       "5    rmsperhh       0.000000\n",
+       "6    popperhh       0.000000\n",
+       "7  bdrmsperrm       0.000000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 피처별로 회귀계수값과 절편값 pandas의 데이터프레임으로 만들기\n",
+    "coeff_df = pd.DataFrame({'Feature': ['Intercept'] + featureCols,\n",
+    "                        'Co-efficients': np.insert(linearModel.coefficients,\n",
+    "                                                  0, linearModel.intercept)})\n",
+    "coeff_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generating Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pyspark.sql.dataframe.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transoform 사용하면 모델 정의할 때 설정한 \"예측 값 변수\"를 새로 만들어 생성한 데이터프레임 반환\n",
+    "predictions = linearModel.transform(test_data)\n",
+    "print(type(predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------+\n",
+      "|         predmedhv|  medhv|\n",
+      "+------------------+-------+\n",
+      "|  1.14982901467337|0.14999|\n",
+      "|1.3037582901805782|  0.225|\n",
+      "| 1.752972574315186|  0.225|\n",
+      "|1.6094289295308724|  0.269|\n",
+      "|1.5956645319495768|  0.344|\n",
+      "|1.2917940087238426|  0.367|\n",
+      "|1.8668547795751218|  0.375|\n",
+      "| 1.369423339785637|  0.394|\n",
+      "|1.5305533439120043|  0.398|\n",
+      "|1.5715143715849273|  0.409|\n",
+      "|1.3261913014043998|  0.417|\n",
+      "| 1.229923204690587|  0.425|\n",
+      "|1.4841640700933143|  0.425|\n",
+      "|1.3510338217435218|   0.43|\n",
+      "|1.2619110212709588|  0.436|\n",
+      "|1.3350814464678744|   0.44|\n",
+      "|1.4832778453641755|   0.44|\n",
+      "|1.4337313361080328|  0.444|\n",
+      "|1.3691187093204966|  0.445|\n",
+      "|  1.47521855868216|  0.446|\n",
+      "+------------------+-------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predictions 데이터프레임에서 y값과 예측값만 추출해 비교\n",
+    "pred_labels = predictions.select('predmedhv', 'medhv')\n",
+    "pred_labels.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get evaluation using metric\n",
+    "\n",
+    "- ``LinearRegressionModel.summary`` 이용하기\n",
+    "    * ``rootMeanSquaredError``,``meanAbsoluteError``,``r2`` 등 반환 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE:0.8819852045268861\n",
+      "MAE: 0.6782895319917991\n",
+      "R2 score: 0.4180854895364573\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"RMSE:{linearModel.summary.rootMeanSquaredError}\")\n",
+    "print(f\"MAE: {linearModel.summary.meanAbsoluteError}\")\n",
+    "print(f\"R2 score: {linearModel.summary.r2}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RegressionEvaluator\n",
+    "\n",
+    "- ``RegreesionEvaluator(predictionCol, labelCol, metricName)``\n",
+    "    * ``predictionCol``: 예측값 변수\n",
+    "    * ``labelCol``: 실제 y값 변수\n",
+    "    * ``metricName``: metric 이름\n",
+    "    \n",
+    "- ``evaluate(예측값)`` 넣어주기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8677342923034236\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(predictionCol='predmedhv',\n",
+    "                               labelCol='medhv',\n",
+    "                               metricName='rmse')\n",
+    "print(f\"RMSE: {evaluator.evaluate(pred_labels)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.6736097745764633\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(predictionCol='predmedhv',\n",
+    "                               labelCol='medhv',\n",
+    "                               metricName='mae')\n",
+    "print(f\"MAE: {evaluator.evaluate(pred_labels)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.42517112885139363\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(predictionCol='predmedhv',\n",
+    "                               labelCol='medhv',\n",
+    "                               metricName='r2')\n",
+    "print(f\"R2 score: {evaluator.evaluate(pred_labels)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RegressionMetrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예측값인 pred_labels를 RDD 자료구조로 변환하고 넣어야 함\n",
+    "metrics = RegressionMetrics(pred_labels.rdd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8677342923034236\n",
+      "MAE: 0.6736097745764633\n",
+      "R2 score: 0.42517112885139363\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"RMSE:\", metrics.rootMeanSquaredError)\n",
+    "print(\"MAE:\", metrics.meanAbsoluteError)\n",
+    "print(\"R2 score:\", metrics.r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 마지막에 운용하던 Pyspark 정지시키기!!\n",
+    "spark.stop()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -796,6 +1276,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
