--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -29,6 +29,7 @@
     "a_cnt = b - a - 1\n",
     "c_cnt = c - b - 1\n",
     "while True:\n",
+    "    # a,b,c 연속적인 값일 때는 break!\n",
     "    if b == a + 1 and c == a + 2:\n",
     "        break\n",
     "    # b와 c사이의 정수개수가 많을 때\n",
@@ -75,6 +76,39 @@
     "        print(max(a_cnt, c_cnt))\n",
     "    except:\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1434번 책 정리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "4 5 6\n",
+      "7 7 7\n",
+      "-6\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 나의 풀이 = 남의 풀이 ##\n",
+    "box, book = map(int, input().split())\n",
+    "box_v = list(map(int, input().split()))\n",
+    "book_v = list(map(int, input().split()))\n",
+    "used_box_v =sum(box_v) - sum(book_v)\n",
+    "\n",
+    "print(used_box_v)"
    ]
   },
   {
