2810번 컵홀더 문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 11034 캥거루 세마리 2"
+    "### 11034번 - 캥거루 세마리 2"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1434번 책 정리"
+    "### 1434번 - 책 정리"
    ]
   },
   {
@@ -109,6 +109,61 @@
     "used_box_v =sum(box_v) - sum(book_v)\n",
     "\n",
     "print(used_box_v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2810번 - 컵홀더"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 내 풀이 -> 오류! ##\n",
+    "# 좌석이 1개 일때, 컵홀더가 2개로 나옴. 즉, '컵홀더 개수 > 사람 수' 이 경우를 고려하지 못함..!\n",
+    "n_seats = int(input())\n",
+    "info_seats = input()\n",
+    "\n",
+    "S_cnt = sum([1 for s in info_seats if s == 'S'])\n",
+    "L_cnt = sum([1 for l in info_seats if l == 'L'])\n",
+    "\n",
+    "max_total = (S_cnt + 1) + (L_cnt//2)\n",
+    "print(max_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "S\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 올바른 풀이 ###\n",
+    "n_seats = int(input())\n",
+    "info_seats = input()\n",
+    "\n",
+    "# Idea)커플석 LL이 2개 이상일 때, 한 명이 컵홀더를 사용하지 못함\n",
+    "# Native Python) string.count('pattern') 사용 가능!\n",
+    "LL_count = info_seats.count('LL')\n",
+    "\n",
+    "if LL_count <= 1:\n",
+    "    print(len(info_seats))\n",
+    "else:\n",
+    "    print(len(info_seats) - LL_count + 1)"
    ]
   },
   {
