5585번 거스름돈/17224번 APC 서브태스크 대회

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -167,6 +167,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5585번 - 거스름돈"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "380\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "paid = int(input())\n",
+    "remain = 1000 - paid\n",
+    "money = [500, 100, 50, 10, 5, 1]\n",
+    "cnt = 0\n",
+    "for m in money:\n",
+    "    cnt += remain // m\n",
+    "    remain = remain % m\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17224번 - APC는 왜 서브테스크 대회가 되었을까?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 나의 풀이 - 100점만 얻음 ###\n",
+    "'''\n",
+    "N : 문제 개수\n",
+    "L : 현정이의 문제 역량(L보다 작거나 같은 문제 풀이 가능)\n",
+    "K : 시간 내 현정이가 풀 수 있는 문제 최대 개수\n",
+    "'''\n",
+    "N, L, K = map(int, input().split())\n",
+    "score = 0\n",
+    "# N개의 문제 개수 입력됨\n",
+    "for _ in range(N):\n",
+    "    sub1, sub2 = map(int, input().split())\n",
+    "    # 현정이가 sub1,2 둘다 해결할 수 있을 경우 -> 140\n",
+    "    if L >= sub1 and L >= sub2:\n",
+    "        score += 140\n",
+    "    # 현정이가 sub1만 해결할 수 있을 경우 -> 100\n",
+    "    elif L >= sub1 and L < sub2:\n",
+    "        score += 100\n",
+    "    # 현정이가 sub1, sub2 둘 다 해결 못할 경우\n",
+    "    else:\n",
+    "        score += 0\n",
+    "\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 7 5\n",
+      "1 3\n",
+      "2 5\n",
+      "3 5\n",
+      "4 8\n",
+      "5 8\n",
+      "6 9\n",
+      "6 7\n",
+      "7 10\n",
+      "660\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 모범 답안 ###\n",
+    "\n",
+    "N, L, K = map(int, input().split())\n",
+    "\n",
+    "## 우선 현정이가 풀 수 있는 문제 최댓값 상관말고 문제 중 현정이 역량 기준으로 풀 수 있는 문제들 기록 ##\n",
+    "easy, hard = 0, 0\n",
+    "for _ in range(N):\n",
+    "    sub1, sub2 = map(int, input().split())\n",
+    "    # sub2 맞추면 sub1까지 맞춘걸로 침!\n",
+    "    if sub2 <= L:\n",
+    "        hard += 1\n",
+    "    # sub1만 맞추었을 경우에만 +1됨!!!\n",
+    "    elif sub1 <= L:\n",
+    "        easy += 1\n",
+    "        \n",
+    "# 풀 수 있는 문제 최댓값 상관없이 현정이가 풀 수 있는 sub2난이도 VS 현정이가 풀 수 있는 최대문제 개수 중 최솟값 설정\n",
+    "ans = min(hard, K) * 140\n",
+    "# 만약 주어진 문제들 중 sub2난이도 문제가 현정이가 풀 수 있는 문제개수 최댓값보다 작은 경우 처리!\n",
+    "if hard < K:\n",
+    "    # 예를 들어, 최대 5개문제를 풀 수 있는데, 3개의 sub2난이도 모두 해결가능하다면 easy값은 0이됨! 왜냐면 easy는 sub1만 맞출 역량이 될 경우만 +1 되기 때문!\n",
+    "    ans += min(K - hard, easy) * 100\n",
+    "print(ans)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
