refer for blogging

--- a/pyspark/spark_sql.ipynb
+++ b/pyspark/spark_sql.ipynb
@@ -35,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- age: long (nullable = true)\n",
-      " |-- name: string (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Create json file using spark\n",
     "# sparkContext로 객체 생성\n",
@@ -64,22 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+\n",
-      "|  name|\n",
-      "+------+\n",
-      "|Justin|\n",
-      "+------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 데이터프레임을 사용하는 임시의 view(가상의 테이블) 생성\n",
     "peopleDF.createOrReplaceTempView(\"people\")\n",
@@ -92,22 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------+----+\n",
-      "|         address|name|\n",
-      "+----------------+----+\n",
-      "|[Columbus, Ohio]| Yin|\n",
-      "+----------------+----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 또한 데이터프레임은 RDD[String] 자료구조를 이용해서 json 데이터셋을 데이터프레임으로 만들 수 있음\n",
     "jsonStrings = ['{\"name\": \"Yin\", \"address\":{\"city\":\"Columbus\", \"state\":\"Ohio\"}}']\n",
@@ -127,24 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+-------+\n",
-      "| age|   name|\n",
-      "+----+-------+\n",
-      "|null|Michael|\n",
-      "|  30|   Andy|\n",
-      "|  19| Justin|\n",
-      "+----+-------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read.json(path)\n",
     "df.show()"
@@ -165,20 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- age: long (nullable = true)\n",
-      " |-- name: string (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 데이터프레임의 스키마 미리보기\n",
     "df.printSchema()"
@@ -193,24 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+\n",
-      "|   name|\n",
-      "+-------+\n",
-      "|Michael|\n",
-      "|   Andy|\n",
-      "| Justin|\n",
-      "+-------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# name 칼럼 select 해서 살펴보기\n",
     "df.select('name').show()"
@@ -218,24 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+---------+\n",
-      "|   name|(age + 1)|\n",
-      "+-------+---------+\n",
-      "|Michael|     null|\n",
-      "|   Andy|       31|\n",
-      "| Justin|       20|\n",
-      "+-------+---------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# name과 age 칼럼값들을 보는데, age에 1을 더하는 연산 취해 새로운 칼럼 만들어 select\n",
     "# 단, null값에는 더해도 null\n",
@@ -253,22 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+----+\n",
-      "|age|name|\n",
-      "+---+----+\n",
-      "| 30|Andy|\n",
-      "+---+----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.filter(df['age'] > 20).show()"
    ]
@@ -283,48 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+-----+\n",
-      "| age|count|\n",
-      "+----+-----+\n",
-      "|  19|    1|\n",
-      "|null|    1|\n",
-      "|  30|    1|\n",
-      "+----+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.groupBy('age').count().show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+-----+\n",
-      "|   name|count|\n",
-      "+-------+-----+\n",
-      "|Michael|    1|\n",
-      "|   Andy|    1|\n",
-      "| Justin|    1|\n",
-      "+-------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.groupBy('name').count().show()"
    ]
@@ -340,24 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+-------+\n",
-      "| age|   name|\n",
-      "+----+-------+\n",
-      "|null|Michael|\n",
-      "|  30|   Andy|\n",
-      "|  19| Justin|\n",
-      "+----+-------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# view로 가상의 테이블 생성\n",
     "df.createOrReplaceTempView('people') # people = 테이블 이름\n",
@@ -379,24 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+-------+\n",
-      "| age|   name|\n",
-      "+----+-------+\n",
-      "|null|Michael|\n",
-      "|  30|   Andy|\n",
-      "|  19| Justin|\n",
-      "+----+-------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Global Temporary View 생성\n",
     "df.createOrReplaceGlobalTempView('people')\n",
@@ -416,21 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lines의 type: <class 'pyspark.rdd.RDD'>\n",
-      "teenagers type: <class 'pyspark.sql.dataframe.DataFrame'>\n",
-      "teenNames type: <class 'list'>\n",
-      "['Name: Justin']\n",
-      "Name: Justin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import Row\n",
     "# SparkContext 객체 만들기\n",
@@ -483,20 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+\n",
-      "|   name|\n",
-      "+-------+\n",
-      "|Michael|\n",
-      "|   Andy|\n",
-      "| Justin|\n",
-      "+-------+\n",
+      "+-------+---+\n",
+      "|   name|age|\n",
+      "+-------+---+\n",
+      "|Michael| 29|\n",
+      "|   Andy| 30|\n",
+      "| Justin| 19|\n",
+      "+-------+---+\n",
       "\n"
      ]
     }
@@ -508,7 +330,7 @@
     "sc = spark.sparkContext\n",
     "\n",
     "# txt file 읽어오기\n",
-    "lines = sc.textFile('./people.txt')\n",
+    "lines = sc.textFile('./useless/people.txt')\n",
     "parts = lines.map(lambda l: l.split(','))\n",
     "\n",
     "## Step 1 ## => value들 처리\n",
@@ -529,7 +351,7 @@
     "\n",
     "# View Table 생성해 쿼리 날려서 데이터 추출해보기\n",
     "schemaPeople.createOrReplaceTempView('people')\n",
-    "results = spark.sql(\"SELECT name FROM people\")\n",
+    "results = spark.sql(\"SELECT * FROM people\")\n",
     "results.show()"
    ]
   },
