--- a/pyspark/spark_RDD.ipynb
+++ b/pyspark/spark_RDD.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "conf = SparkConf().setAppName('appName').setMaster('master')\n",
-    "sc = SparkContext(conf=conf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sc = SparkContext.getOrCreate()"
    ]
   },
@@ -87,12 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ParallelCollectionRDD[1] at readRDDFromFile at PythonRDD.scala:262\n"
+     ]
+    }
+   ],
    "source": [
     "data = [1, 2, 3, 4, 5]\n",
-    "distData = sc.parallelize(data)"
+    "distData = sc.parallelize(data)\n",
+    "print(distData)"
    ]
   },
   {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -343,6 +343,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
