--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -283,6 +283,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 18238번 - ZOAC 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZOAC\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 모범 답안 ### => 이해안되면 손으로 직접 그려보기..\n",
+    "# idea) 순환되는 즉 Z->A이기 때문에.. 26이라는 숫자 사용하기..\n",
+    "\n",
+    "# 문자열 입력 -> loop가능\n",
+    "chars = input()\n",
+    "\n",
+    "start = 'A'\n",
+    "count = 0\n",
+    "for char in chars:\n",
+    "    left = ord(start) - ord(char)\n",
+    "    right = ord(char) - ord(start)\n",
+    "    \n",
+    "    if left < 0:\n",
+    "        left += 26\n",
+    "    if right < 0:\n",
+    "        right += 26\n",
+    "    count += min(left, right)\n",
+    "    start = char\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
